Correct overflow problem

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -31,7 +31,7 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 #wrapper.toggled #sidebar-wrapper {
